fix horizontal scroll

--- a/horizontal-scroll/horizontal-scroll.component.scss
+++ b/horizontal-scroll/horizontal-scroll.component.scss
@@ -19,6 +19,7 @@
 
 .scroll-wrapper {
   overflow: hidden;
+  white-space: nowrap;
   display: block;
   ::ng-deep > * {
     width: 100%;
